# myIncDatabase

./: CMakeLists.txt  INSTALL  README  TODO  TODO.txt  dfooter.cpp  dfooter.h  dhomescreen.cpp  dhomescreen.h  dnamespace.cpp  dnamespace.h  dproject.cpp  dproject.h  dtablewidget.h  dworkwidget.cpp  dworkwidget.h  en.ts  errors.h  main.cpp  mainwindow.cpp  mainwindow.h  myinc.pri  myinc.pro  myinc.pro.user.2.2pre5  ncreport.pri  resource.qrc
doc/: sample-db.sqlite  sample-main.ui  simple-project.xml
lang/: en.ts  ru.ts
res/templates/: 1.ui  2.ui  add_product.ui  doc_search.ui  myinc.sqlite  mysql.xml  sqlite.xml  ui.xml
samples/: sample-main.ui  simple-project.xml
src/: CMakeLists.txt  dnamespace.cpp  dnamespace.h  dproject.cpp  dproject.h  dthreaduri.cpp  dthreaduri.h  dwidget.cpp  dwidget.h  errors.h  main.cpp  src.pro
src/app/: CMakeLists.txt  app.pro  core.h  errors.h
src/app/core/: dauth.cpp  dauth.h  ddebug.cpp  ddebug.h  dnamespace.cpp  dnamespace.h  dplugin.cpp  dplugin.h  dproject.cpp  dproject.h  dsystemfuncs.cpp  dsystemfuncs.h  durihelper.cpp  durihelper.h  dxml.cpp  dxml.h  myincapplication.cpp  myincapplication.h
src/app/ui/: ddbconfig.cpp  ddbconfig.h  ddebugwidget.cpp  ddebugwidget.h  dfooter.cpp  dfooter.h  dhomescreen.cpp  dhomescreen.h  dsqlquertyviewer.cpp  dsqlquertyviewer.h  dworkwidget.cpp  dworkwidget.h  mainwindow.cpp  mainwindow.h  qaboutwidget.cpp  qaboutwidget.h
src/core/: dauth.cpp  ddebug.cpp  ddebug.h  dnamespace.cpp  dnamespace.h  dproject.cpp  dproject.h  dsystemfuncs.cpp  dsystemfuncs.h  dthreadpool.cpp  dthreadpool.h  dthreaduri.cpp  dthreaduri.h  durihelper.cpp  durihelper.h  myincapplication.cpp  myincapplication.h
src/libs/: libs.pri  libs.pro
src/libs/wizard/: dwizard.cpp  dwizard.h  wizard.pri  wizard.pro
src/share/lang/: en.ts
src/ui/: ddbconfig.cpp  ddbconfig.h  dfooter.cpp  dfooter.h  dhomescreen.cpp  dhomescreen.h  dsqlquertyviewer.cpp  dsqlquertyviewer.h  dtablewidget.cpp  dtablewidget.h  dworkwidget.cpp  dworkwidget.h  mainwindow.cpp  mainwindow.h  qaboutwidget.cpp
templates/: sql.xml
